# woodnet

./: .gitignore  .readthedocs.yaml  LICENSE.txt  _augmentations.py  _loadhelpers.py  _maintrain.py  _minipredict.py  _p2d.py  augmentations.py  benchmark.py  conftest.py  dataobjects.py  datasets.py  datastats.py  directoryhandlers.py  environment-cpu.yaml  environment.yaml  evaluation.py  evametrics.py  io_handlers.py  loader.py  loadhelpers.py  logtools.py  minipredict.py  minitrain.py  models.py  net.py  prediction.py  pyproject.toml  pytest.ini  readme.md  refolder.py  tboardhelpers.py  test_EagerSlice.py  test_SliceDataset.py  test_evametrics.py  test_loader.py  test_logtools.py  test_models.py  test_resnet3D.py  (+10 more)
datasets/: __init__.py  planar.py  volumetric.py
docs/: conf.py  environment-cpu.yaml  index.rst  installation.rst  introduction.rst  usage.rst
evaluation/: __init__.py
examples/: dataconf.yaml
legacy/: _evalruns.py  _transformbuilder.py  _volumetrain.py
models/: __init__.py  buildingblocks.py  planar.py  volume.py  volumetric.py
tests/: _dataconf.yaml  conftest.py  test_BasicModelParameterLogger.py  test_EagerSliceDatasetBuilder.py  test_LazyModelDict.py  test_RWDHandler.py  test_RecursiveLoggedDict.py  test_ScoredCheckpoint.py  test_SliceDataset.py  test_checkpointhandler.py  test_clipping.py  test_confvalidation.py  test_create_model.py  test_cvsplits.py  test_directories.py  test_evaluate.py  test_evametrics.py  test_extraction.py  test_foldgeneration.py  test_inference.py  test_inference_utils.py  test_loader.py  test_logtools.py  (+15 more)
(+135 files in other folders)
